--- a/FuelPFMClient/user_info.plist
+++ b/FuelPFMClient/user_info.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>email</key>
-	<string>christophe.ecabert@gmail.com</string>
+	<string></string>
 	<key>pwd</key>
-	<string>toto1234</string>
+	<string></string>
 </dict>
 </plist>
